[metadata]
name = project-config
summary = ci config for seans personal ci
description-file =
    README.rst
author = Sean Mooney
author-email = sean@seanmooney.info
home-page = https://zuul.seanmooney.info
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
